[project]
name = "comfyui-dynamic-util-nodes"
description = "ComfyS3 helpful util nodes for dynamic workflows"
version = "0.0.1"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"


[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "C90",  # McCabe complexity
    "N",  # pep8 naming
    "ASYNC",  # flake8-async
    "S",  # bandit security testing
    "I",  # isort
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

